--- a/toure-parker/style.css
+++ b/toure-parker/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 .header {
-  background-image: url("https://colinbendell.cloudinary.com/image/upload/c_crop,f_auto,g_auto,h_350,w_400/v1512090971/Wizard-Clap-by-Markus-Magnusson.gif");
+  background-image: url("https://i.pinimg.com/originals/31/6c/a5/316ca5f3c5b1044aa29e49fda5a7ecde.gif");
   height: 700px;
   background-repeat: no-repeat;
   background-position: top;
