--- a/toure-parker/style.css
+++ b/toure-parker/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 .header {
-  background-image: url("https://i.pinimg.com/originals/31/6c/a5/316ca5f3c5b1044aa29e49fda5a7ecde.gif");
+  background-image: url("https://jerimumgeek.oportaln10.com.br/wp-content/uploads/2016/12/maxresdefault-11.jpg");
   height: 700px;
   background-repeat: no-repeat;
   background-position: top;
